--- a/Preprocessing-Berk.ipynb
+++ b/Preprocessing-Berk.ipynb
@@ -7,119 +7,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                           title     type          director  \\\n",
-      "0              Dear White People  TV Show               NaN   \n",
-      "1                      Grown Ups    Movie      Dennis Dugan   \n",
-      "2                     Dark Skies    Movie     Scott Stewart   \n",
-      "3                           Jaws    Movie  Steven Spielberg   \n",
-      "4                         Jaws 2    Movie    Jeannot Szwarc   \n",
-      "...                          ...      ...               ...   \n",
-      "1484       12 Dates of Christmas    Movie               NaN   \n",
-      "1485  10 Things I Hate About You    Movie        Gil Junger   \n",
-      "1486                     Outpost    Movie      Steve Barker   \n",
-      "1487                     Outpost    Movie      Steve Barker   \n",
-      "1488                 Harry Brown    Movie     Daniel Barber   \n",
-      "\n",
-      "                                                   cast        country  \\\n",
-      "0     Logan Browning, Brandon P. Bell, DeRon Horton,...  United States   \n",
-      "1     Adam Sandler, Kevin James, Chris Rock, David S...  United States   \n",
-      "2     Keri Russell, Josh Hamilton, J.K. Simmons, Dak...  United States   \n",
-      "3     Roy Scheider, Robert Shaw, Richard Dreyfuss, L...  United States   \n",
-      "4     Roy Scheider, Lorraine Gary, Murray Hamilton, ...  United States   \n",
-      "...                                                 ...            ...   \n",
-      "1484                                                NaN            NaN   \n",
-      "1485  Heath Ledger, Julia Stiles, Joseph Gordon-Levi...            NaN   \n",
-      "1486  Ray Stevenson, Julian Wadham, Richard Brake, M...            NaN   \n",
-      "1487  Ray Stevenson, Julian Wadham, Richard Brake, M...            NaN   \n",
-      "1488  Michael Caine, Emily Mortimer, Joseph Gilgun, ...            NaN   \n",
-      "\n",
-      "              date_added  release_year rating_merged   duration  \\\n",
-      "0     September 22, 2021          2021         TV-MA  4 Seasons   \n",
-      "1     September 20, 2021          2010         PG-13    103 min   \n",
-      "2     September 19, 2021          2013         PG-13     97 min   \n",
-      "3     September 16, 2021          1975            PG    124 min   \n",
-      "4     September 16, 2021          1978            PG    116 min   \n",
-      "...                  ...           ...           ...        ...   \n",
-      "1484                 NaN          2011            PG     87 min   \n",
-      "1485                 NaN          1999         PG-13     97 min   \n",
-      "1486                 NaN          2008             R     90 min   \n",
-      "1487                 NaN          2008             R     90 min   \n",
-      "1488                 NaN          2010             R    103 min   \n",
-      "\n",
-      "                                       listed_in  \\\n",
-      "0                         TV Comedies, TV Dramas   \n",
-      "1                                       Comedies   \n",
-      "2                Horror Movies, Sci-Fi & Fantasy   \n",
-      "3     Action & Adventure, Classic Movies, Dramas   \n",
-      "4               Dramas, Horror Movies, Thrillers   \n",
-      "...                                          ...   \n",
-      "1484                              Drama, Romance   \n",
-      "1485                      Comedy, Drama, Romance   \n",
-      "1486                                      Action   \n",
-      "1487                                      Action   \n",
-      "1488                     Action, Drama, Suspense   \n",
-      "\n",
-      "                                            description rating_bechdel  \\\n",
-      "0     Students of color navigate the daily slights a...              3   \n",
-      "1     Mourning the loss of their beloved junior high...              3   \n",
-      "2     A family’s idyllic suburban life shatters when...              2   \n",
-      "3     When an insatiable great white shark terrorize...              3   \n",
-      "4     Four years after the last deadly shark attacks...              2   \n",
-      "...                                                 ...            ...   \n",
-      "1484  Setup on a Christmas Eve date, a woman must re...              3   \n",
-      "1485  On the first day at his new school, Cameron in...              3   \n",
-      "1486  In war-torn Eastern Europe, a world-weary grou...              0   \n",
-      "1487  In war-torn Eastern Europe, a world-weary grou...              0   \n",
-      "1488  Harry Brown, starring two-time Academy Award w...              1   \n",
-      "\n",
-      "      year;;;;;                            Imdb Link  IMDB Score  \\\n",
-      "0     2014;;;;;  http://www.imdb.com/title/tt2235108         6.2   \n",
-      "1     2010;;;;;  http://www.imdb.com/title/tt1375670         6.0   \n",
-      "2     2013;;;;;  http://www.imdb.com/title/tt2387433         6.3   \n",
-      "3     1975;;;;;    http://www.imdb.com/title/tt73195         8.0   \n",
-      "4     1978;;;;;    http://www.imdb.com/title/tt77766         5.7   \n",
-      "...         ...                                  ...         ...   \n",
-      "1484  2011;;;;;  http://www.imdb.com/title/tt1846442         6.3   \n",
-      "1485  1999;;;;;   http://www.imdb.com/title/tt147800         7.2   \n",
-      "1486  2008;;;;;   http://www.imdb.com/title/tt892899         5.9   \n",
-      "1487  2008;;;;;   http://www.imdb.com/title/tt892899         5.9   \n",
-      "1488  2009;;;;;  http://www.imdb.com/title/tt1289406         7.2   \n",
-      "\n",
-      "                         Genre  \\\n",
-      "0                 Comedy|Drama   \n",
-      "1                       Comedy   \n",
-      "2       Horror|Sci-Fi|Thriller   \n",
-      "3     Adventure|Drama|Thriller   \n",
-      "4       Adventure|Drama|Horror   \n",
-      "...                        ...   \n",
-      "1484    Comedy|Fantasy|Romance   \n",
-      "1485      Comedy|Drama|Romance   \n",
-      "1486      Action|Horror|Sci-Fi   \n",
-      "1487      Action|Horror|Sci-Fi   \n",
-      "1488        Action|Crime|Drama   \n",
-      "\n",
-      "                                                 Poster  year  \n",
-      "0     https://images-na.ssl-images-amazon.com/images...  2014  \n",
-      "1     https://images-na.ssl-images-amazon.com/images...  2010  \n",
-      "2     https://images-na.ssl-images-amazon.com/images...  2013  \n",
-      "3     https://images-na.ssl-images-amazon.com/images...  1975  \n",
-      "4     https://images-na.ssl-images-amazon.com/images...  1978  \n",
-      "...                                                 ...   ...  \n",
-      "1484  https://images-na.ssl-images-amazon.com/images...  2011  \n",
-      "1485  https://images-na.ssl-images-amazon.com/images...  1999  \n",
-      "1486  https://images-na.ssl-images-amazon.com/images...  2008  \n",
-      "1487  https://images-na.ssl-images-amazon.com/images...  2008  \n",
-      "1488  https://images-na.ssl-images-amazon.com/images...  2009  \n",
-      "\n",
-      "[1489 rows x 18 columns]\n",
-      "Index(['title', 'type', 'director', 'cast', 'country', 'date_added',\n",
-      "       'release_year', 'rating_merged', 'duration', 'listed_in', 'description',\n",
-      "       'rating_bechdel', 'year;;;;;', 'Imdb Link', 'IMDB Score', 'Genre',\n",
-      "       'Poster', 'year'],\n",
-      "      dtype='object')\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Users/berk/Downloads/netflix_titles.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m mergedmoviegenre_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/berk/Downloads/MergedMovieGenre.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Veri çerçevelerini okuyun\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m netflix_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnetflix_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m prime_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(prime_file)\n\u001b[0;32m     12\u001b[0m bechdel_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(bechdel_file, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlatin-1\u001b[39m\u001b[38;5;124m'\u001b[39m, on_bad_lines\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mskip\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m   1014\u001b[0m     dialect,\n\u001b[0;32m   1015\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m   1023\u001b[0m )\n\u001b[0;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[0;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1880\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1878\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode:\n\u001b[0;32m   1879\u001b[0m         mode \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1880\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;241m=\u001b[39m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1881\u001b[0m \u001b[43m    \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1882\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1883\u001b[0m \u001b[43m    \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mencoding\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1884\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcompression\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcompression\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1885\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmemory_map\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmemory_map\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1886\u001b[0m \u001b[43m    \u001b[49m\u001b[43mis_text\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mis_text\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1887\u001b[0m \u001b[43m    \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mencoding_errors\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstrict\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1888\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstorage_options\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1889\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1890\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1891\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles\u001b[38;5;241m.\u001b[39mhandle\n",
+      "File \u001b[1;32m~\\miniconda3\\Lib\\site-packages\\pandas\\io\\common.py:873\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    868\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(handle, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m    869\u001b[0m     \u001b[38;5;66;03m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    870\u001b[0m     \u001b[38;5;66;03m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    871\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mencoding \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m ioargs\u001b[38;5;241m.\u001b[39mmode:\n\u001b[0;32m    872\u001b[0m         \u001b[38;5;66;03m# Encoding\u001b[39;00m\n\u001b[1;32m--> 873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[0;32m    874\u001b[0m \u001b[43m            \u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    875\u001b[0m \u001b[43m            \u001b[49m\u001b[43mioargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    876\u001b[0m \u001b[43m            \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mioargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    877\u001b[0m \u001b[43m            \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    878\u001b[0m \u001b[43m            \u001b[49m\u001b[43mnewline\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    879\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m    882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(handle, ioargs\u001b[38;5;241m.\u001b[39mmode)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Users/berk/Downloads/netflix_titles.csv'"
      ]
     }
    ],
@@ -194,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
